--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-i18next": "^16.5.0"
+    "react-i18next": "^16.5.0",
+    "react-joyride": "^2.9.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
