--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@sentry/react": "^10.30.0",
     "@supabase/supabase-js": "^2.57.4",
     "@vercel/analytics": "^1.6.1",
+    "canvas-confetti": "^1.9.4",
     "framer-motion": "^12.23.25",
     "i18next": "^25.7.2",
     "i18next-browser-languagedetector": "^8.2.0",
@@ -24,7 +25,8 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-i18next": "^16.5.0",
-    "react-joyride": "^2.9.3"
+    "react-joyride": "^2.9.3",
+    "recharts": "^3.6.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
